[package]
name = "iced_table"
version = "0.13.0"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A table widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_table"

[workspace]
default-members = [
  "./example"
]
members = [
  ".",
  "./example",
]

[features]
__docs = ["iced_widget/lazy"]

[dependencies]
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_drop = { git = "https://github.com/ProffDea/iced_drop.git", branch = "dev" }

[package.metadata.docs.rs]
all-features = true
